# EnergoKodProperty

./: CMakeLists.txt
Include/EnergoKodProperty/: Property.h
Tests/: CMakeLists.txt
Tests/Src/: Main.cpp
